# bondfauna-svelte

./: .gitignore  .gitmodules  Cargo.toml  README.md  TODO.yml  build_wasm.sh  fs.js  generate_answer_sets.sh  index.html  index.scss  nyt.js  package-lock.json  package.json  rsw.toml  sort_answer_file_by_count.py  svelte.config.js  tsconfig.json  vite.config.ts
data/: create_json_lists.py  download_ngrams.sh  generate_wordbank.sh  kaggle_wordbank.py  plot.py  sort_answer_file_by_count.py
data/allowed/: 4.json  5.json  6.json  7.json  8.json  9.json
data/answers/: 4.json  5.json  6.json  7.json  8.json  9.json
data/wordbank/: 4_kaggle.csv  4_letter_words.txt  5_kaggle.csv  6_kaggle.csv  7_kaggle.csv  8_kaggle.csv  9_kaggle.csv
frontend/: Cargo.toml
frontend/src/: game.rs  key.rs  letters.rs  main.rs
src/: driver.rs  game.rs  key.rs  letters.rs
src/lib/: hamburger.svelte  lengths.svelte  paintbrush.svelte  report.svelte
src/lib/firebase/: api.js  app.js  db.js
src/lib/icons/: icon.svelte  lengths.svelte  paintbrush.svelte  reset.svelte
src/lib/server/allowed/: 5.json
src/lib/server/answers/: 4.json  6.json  (+1 more)
src/routes/: +layout.js  +layout.svelte  +page.svelte  App.svelte  Board.svelte  Header.svelte  Key.svelte  Keyboard.svelte  Row.svelte  Tile.svelte  driver.js  driver.ts  letters.rs  main.rs  reactive_colors.scss  utils.ts
src/wasm-wordle/: package.json  wasm_wordle.d.ts  wasm_wordle.js  wasm_wordle_bg.js  wasm_wordle_bg.wasm.d.ts
static/: 5_letter_answers.json
wasm-wordle/: Cargo.toml
wasm-wordle/src/: game.rs  key.rs  letters.rs  lib.rs
(+3 files in other folders)
