[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# anyhow = "1.0.68"
log = "0.4.17"
wasm-logger = "0.2.0"
yew = {version="0.20.0", features=["csr"]}
roget = {path = "./roget"}
getrandom = {version = "0.2.8", features=["js"]}
rand ="0.8.5"
