[package]
name = "wasm-wordle"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.17"
wasm-logger = "0.2.0"
roget = { version = "0.1.0", path = "../roget" }
getrandom = {version = "0.2.8", features=["js"]}
# web-sys = {version="0.3.60",features=["Document","Element", "Node", "Event"]}
rand ="0.8.5"
# gloo = "0.8.0"
wasm-bindgen = "0.2.83"
serde = { version = "1.0.152", features = ["derive"] }
serde-wasm-bindgen = "0.4.5"
console_log = "0.2.0"
console_error_panic_hook = "0.1.7"

